fix: update name alignment

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -16,7 +16,7 @@
   font-size: 16px;
   line-height: 26px;
   color: variables.$secondaryTextColor;
-  text-align: center;
+  text-align: left;
 }
 
 .Home__HeadingsAndIllustration {
